Adding Kovaaks Data

--- a/_notebooks/KovaaksData.ipynb
+++ b/_notebooks/KovaaksData.ipynb
@@ -29,7 +29,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# The Data\n",
+    "# File Names\n",
     "Kovaaks has a great feature in which it saves every mini-game's stats to a csv. \n",
     "The format of the csv's names is as follows\n",
     "```\n",
@@ -38,7 +38,283 @@
     "Example:\n",
     "```\n",
     "Tile Frenzy - Challenge - 2020.12.14-08.46.00 Stats.csv\n",
+    "```\n",
+    "\n",
+    "Some of the scenario names also have dashes so just checking against the first dash will not work\n",
+    "```\n",
+    "Tile Frenzy - Strafing - 03 - Challenge - 2020.12.14-08.34.31 Stats.csv\n",
     "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# The Data\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#collapse-hide\n",
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Kill #</th>\n",
+       "      <th>Timestamp</th>\n",
+       "      <th>Bot</th>\n",
+       "      <th>Weapon</th>\n",
+       "      <th>TTK</th>\n",
+       "      <th>Shots</th>\n",
+       "      <th>Hits</th>\n",
+       "      <th>Accuracy</th>\n",
+       "      <th>Damage Done</th>\n",
+       "      <th>Damage Possible</th>\n",
+       "      <th>Efficiency</th>\n",
+       "      <th>Cheated</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Kill #</td>\n",
+       "      <td>Timestamp</td>\n",
+       "      <td>Bot</td>\n",
+       "      <td>Weapon</td>\n",
+       "      <td>TTK</td>\n",
+       "      <td>Shots</td>\n",
+       "      <td>Hits</td>\n",
+       "      <td>Accuracy</td>\n",
+       "      <td>Damage Done</td>\n",
+       "      <td>Damage Possible</td>\n",
+       "      <td>Efficiency</td>\n",
+       "      <td>Cheated</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>08:45:30.858</td>\n",
+       "      <td>target</td>\n",
+       "      <td>pistol</td>\n",
+       "      <td>0s</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>25</td>\n",
+       "      <td>50</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>false</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>08:45:31.212</td>\n",
+       "      <td>target</td>\n",
+       "      <td>pistol</td>\n",
+       "      <td>0s</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>25</td>\n",
+       "      <td>50</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>false</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>08:45:31.575</td>\n",
+       "      <td>target</td>\n",
+       "      <td>pistol</td>\n",
+       "      <td>0s</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>25</td>\n",
+       "      <td>50</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>false</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>08:45:31.931</td>\n",
+       "      <td>target</td>\n",
+       "      <td>pistol</td>\n",
+       "      <td>0s</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>25</td>\n",
+       "      <td>50</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>false</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>123</th>\n",
+       "      <td>Crosshair Scale:</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>124</th>\n",
+       "      <td>Crosshair Color:</td>\n",
+       "      <td>FFFF00</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>125</th>\n",
+       "      <td>Resolution</td>\n",
+       "      <td>2560x1080</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>126</th>\n",
+       "      <td>Avg FPS</td>\n",
+       "      <td>299.709625</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>127</th>\n",
+       "      <td>Resolution Scale</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>128 rows × 12 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               Kill #     Timestamp     Bot  Weapon  TTK  Shots  Hits  \\\n",
+       "0              Kill #     Timestamp     Bot  Weapon  TTK  Shots  Hits   \n",
+       "1                   1  08:45:30.858  target  pistol   0s      1     1   \n",
+       "2                   2  08:45:31.212  target  pistol   0s      1     1   \n",
+       "3                   3  08:45:31.575  target  pistol   0s      1     1   \n",
+       "4                   4  08:45:31.931  target  pistol   0s      1     1   \n",
+       "..                ...           ...     ...     ...  ...    ...   ...   \n",
+       "123  Crosshair Scale:           1.0     NaN     NaN  NaN    NaN   NaN   \n",
+       "124  Crosshair Color:        FFFF00     NaN     NaN  NaN    NaN   NaN   \n",
+       "125        Resolution     2560x1080     NaN     NaN  NaN    NaN   NaN   \n",
+       "126           Avg FPS    299.709625     NaN     NaN  NaN    NaN   NaN   \n",
+       "127  Resolution Scale         100.0     NaN     NaN  NaN    NaN   NaN   \n",
+       "\n",
+       "     Accuracy  Damage Done  Damage Possible  Efficiency  Cheated  \n",
+       "0    Accuracy  Damage Done  Damage Possible  Efficiency  Cheated  \n",
+       "1           1           25               50         0.5    false  \n",
+       "2           1           25               50         0.5    false  \n",
+       "3           1           25               50         0.5    false  \n",
+       "4           1           25               50         0.5    false  \n",
+       "..        ...          ...              ...         ...      ...  \n",
+       "123       NaN          NaN              NaN         NaN      NaN  \n",
+       "124       NaN          NaN              NaN         NaN      NaN  \n",
+       "125       NaN          NaN              NaN         NaN      NaN  \n",
+       "126       NaN          NaN              NaN         NaN      NaN  \n",
+       "127       NaN          NaN              NaN         NaN      NaN  \n",
+       "\n",
+       "[128 rows x 12 columns]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "#collapse-show\n",
+    "example_stat_data = \"https://JPrier.github.io/stats/Tile%20Frenzy%20-%20Challenge%20-%202020.12.14-08.46.00%20Stats.csv\"\n",
+    "\n",
+    "df = pd.read_csv(example_stat_data, names=[\"Kill #\",\"Timestamp\",\"Bot\",\"Weapon\",\"TTK\",\"Shots\",\"Hits\",\"Accuracy\",\"Damage Done\",\"Damage Possible\",\"Efficiency\",\"Cheated\"])\n",
+    "with pd.option_context('display.max_rows', 10, 'display.max_columns', None):  # more options can be specified also\n",
+    "    display(df)"
    ]
   },
   {
