Started parsing files

--- a/_notebooks/KovaaksData.ipynb
+++ b/_notebooks/KovaaksData.ipynb
@@ -50,24 +50,60 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# The Data\n"
+    "# The Data\n",
+    "\n",
+    "Each file has 4 parts:\n",
+    "* List of all Kills\n",
+    "* Weapon, shots, hits, damage done, damage possible\n",
+    "* Overall Stats and info \n",
+    "* Info about settings (input lag, fps, sens, FOV, etc)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
     "#collapse-hide\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "from urllib.request import urlopen\n",
+    "from io import StringIO"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Each part of the data has different formats and headers.\n",
+    "Here are the Headers/keys in python"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#collapse-show\n",
+    "keys_kills=[\"Kill #\",\"Timestamp\",\"Bot\",\"Weapon\",\"TTK\",\"Shots\",\"Hits\",\"Accuracy\",\"Damage Done\",\"Damage Possible\",\"Efficiency\",\"Cheated\"]\n",
+    "keys_weapon=[\"Weapon\",\"Shots\",\"Hits\",\"Damage Done\",\"Damage Possible\"]\n",
+    "keys_info=[]\n",
+    "keys_settings=[]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "HTTP Error 403: Forbidden\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -106,78 +142,78 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>Kill #</td>\n",
-       "      <td>Timestamp</td>\n",
-       "      <td>Bot</td>\n",
-       "      <td>Weapon</td>\n",
-       "      <td>TTK</td>\n",
-       "      <td>Shots</td>\n",
-       "      <td>Hits</td>\n",
-       "      <td>Accuracy</td>\n",
-       "      <td>Damage Done</td>\n",
-       "      <td>Damage Possible</td>\n",
-       "      <td>Efficiency</td>\n",
-       "      <td>Cheated</td>\n",
+       "      <td>1</td>\n",
+       "      <td>14:19:43.846</td>\n",
+       "      <td>target</td>\n",
+       "      <td>pistol</td>\n",
+       "      <td>0s</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>400.0</td>\n",
+       "      <td>0.250</td>\n",
+       "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>08:45:30.858</td>\n",
+       "      <td>2</td>\n",
+       "      <td>14:19:45.497</td>\n",
        "      <td>target</td>\n",
        "      <td>pistol</td>\n",
-       "      <td>0s</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>25</td>\n",
-       "      <td>50</td>\n",
+       "      <td>0.307s</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>0.5</td>\n",
-       "      <td>false</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>800.0</td>\n",
+       "      <td>0.125</td>\n",
+       "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>2</td>\n",
-       "      <td>08:45:31.212</td>\n",
+       "      <td>3</td>\n",
+       "      <td>14:19:46.148</td>\n",
        "      <td>target</td>\n",
        "      <td>pistol</td>\n",
        "      <td>0s</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>25</td>\n",
-       "      <td>50</td>\n",
-       "      <td>0.5</td>\n",
-       "      <td>false</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>400.0</td>\n",
+       "      <td>0.250</td>\n",
+       "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>3</td>\n",
-       "      <td>08:45:31.575</td>\n",
+       "      <td>4</td>\n",
+       "      <td>14:19:46.784</td>\n",
        "      <td>target</td>\n",
        "      <td>pistol</td>\n",
        "      <td>0s</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>25</td>\n",
-       "      <td>50</td>\n",
-       "      <td>0.5</td>\n",
-       "      <td>false</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>400.0</td>\n",
+       "      <td>0.250</td>\n",
+       "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>4</td>\n",
-       "      <td>08:45:31.931</td>\n",
+       "      <td>5</td>\n",
+       "      <td>14:19:47.384</td>\n",
        "      <td>target</td>\n",
        "      <td>pistol</td>\n",
        "      <td>0s</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>25</td>\n",
-       "      <td>50</td>\n",
-       "      <td>0.5</td>\n",
-       "      <td>false</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>400.0</td>\n",
+       "      <td>0.250</td>\n",
+       "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -195,113 +231,113 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>123</th>\n",
-       "      <td>Crosshair Scale:</td>\n",
+       "      <th>16781</th>\n",
+       "      <td>87</td>\n",
+       "      <td>16:47:47.289</td>\n",
+       "      <td>Shinji small Bot</td>\n",
+       "      <td>pistol</td>\n",
+       "      <td>0s</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2000.0</td>\n",
+       "      <td>2000.0</td>\n",
+       "      <td>1.000</td>\n",
+       "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>124</th>\n",
-       "      <td>Crosshair Color:</td>\n",
-       "      <td>FFFF00</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <th>16782</th>\n",
+       "      <td>88</td>\n",
+       "      <td>16:47:47.834</td>\n",
+       "      <td>Shinji Bot</td>\n",
+       "      <td>pistol</td>\n",
+       "      <td>0s</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2000.0</td>\n",
+       "      <td>2000.0</td>\n",
+       "      <td>1.000</td>\n",
+       "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>125</th>\n",
-       "      <td>Resolution</td>\n",
-       "      <td>2560x1080</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <th>16783</th>\n",
+       "      <td>89</td>\n",
+       "      <td>16:47:48.056</td>\n",
+       "      <td>Shinji Bot</td>\n",
+       "      <td>pistol</td>\n",
+       "      <td>0s</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2000.0</td>\n",
+       "      <td>2000.0</td>\n",
+       "      <td>1.000</td>\n",
+       "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>126</th>\n",
-       "      <td>Avg FPS</td>\n",
-       "      <td>299.709625</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <th>16784</th>\n",
+       "      <td>90</td>\n",
+       "      <td>16:47:48.635</td>\n",
+       "      <td>Shinji Bot</td>\n",
+       "      <td>pistol</td>\n",
+       "      <td>0s</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2000.0</td>\n",
+       "      <td>2000.0</td>\n",
+       "      <td>1.000</td>\n",
+       "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>127</th>\n",
-       "      <td>Resolution Scale</td>\n",
-       "      <td>100.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <th>16785</th>\n",
+       "      <td>91</td>\n",
+       "      <td>16:47:49.203</td>\n",
+       "      <td>Shinji Bot</td>\n",
+       "      <td>pistol</td>\n",
+       "      <td>0s</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2000.0</td>\n",
+       "      <td>2000.0</td>\n",
+       "      <td>1.000</td>\n",
+       "      <td>False</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>128 rows × 12 columns</p>\n",
+       "<p>16786 rows × 12 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "               Kill #     Timestamp     Bot  Weapon  TTK  Shots  Hits  \\\n",
-       "0              Kill #     Timestamp     Bot  Weapon  TTK  Shots  Hits   \n",
-       "1                   1  08:45:30.858  target  pistol   0s      1     1   \n",
-       "2                   2  08:45:31.212  target  pistol   0s      1     1   \n",
-       "3                   3  08:45:31.575  target  pistol   0s      1     1   \n",
-       "4                   4  08:45:31.931  target  pistol   0s      1     1   \n",
-       "..                ...           ...     ...     ...  ...    ...   ...   \n",
-       "123  Crosshair Scale:           1.0     NaN     NaN  NaN    NaN   NaN   \n",
-       "124  Crosshair Color:        FFFF00     NaN     NaN  NaN    NaN   NaN   \n",
-       "125        Resolution     2560x1080     NaN     NaN  NaN    NaN   NaN   \n",
-       "126           Avg FPS    299.709625     NaN     NaN  NaN    NaN   NaN   \n",
-       "127  Resolution Scale         100.0     NaN     NaN  NaN    NaN   NaN   \n",
+       "      Kill #     Timestamp               Bot  Weapon     TTK  Shots  Hits  \\\n",
+       "0          1  14:19:43.846            target  pistol      0s    1.0   1.0   \n",
+       "1          2  14:19:45.497            target  pistol  0.307s    2.0   1.0   \n",
+       "2          3  14:19:46.148            target  pistol      0s    1.0   1.0   \n",
+       "3          4  14:19:46.784            target  pistol      0s    1.0   1.0   \n",
+       "4          5  14:19:47.384            target  pistol      0s    1.0   1.0   \n",
+       "...      ...           ...               ...     ...     ...    ...   ...   \n",
+       "16781     87  16:47:47.289  Shinji small Bot  pistol      0s    1.0   1.0   \n",
+       "16782     88  16:47:47.834        Shinji Bot  pistol      0s    1.0   1.0   \n",
+       "16783     89  16:47:48.056        Shinji Bot  pistol      0s    1.0   1.0   \n",
+       "16784     90  16:47:48.635        Shinji Bot  pistol      0s    1.0   1.0   \n",
+       "16785     91  16:47:49.203        Shinji Bot  pistol      0s    1.0   1.0   \n",
        "\n",
-       "     Accuracy  Damage Done  Damage Possible  Efficiency  Cheated  \n",
-       "0    Accuracy  Damage Done  Damage Possible  Efficiency  Cheated  \n",
-       "1           1           25               50         0.5    false  \n",
-       "2           1           25               50         0.5    false  \n",
-       "3           1           25               50         0.5    false  \n",
-       "4           1           25               50         0.5    false  \n",
-       "..        ...          ...              ...         ...      ...  \n",
-       "123       NaN          NaN              NaN         NaN      NaN  \n",
-       "124       NaN          NaN              NaN         NaN      NaN  \n",
-       "125       NaN          NaN              NaN         NaN      NaN  \n",
-       "126       NaN          NaN              NaN         NaN      NaN  \n",
-       "127       NaN          NaN              NaN         NaN      NaN  \n",
+       "       Accuracy  Damage Done  Damage Possible  Efficiency Cheated  \n",
+       "0           1.0        100.0            400.0       0.250   False  \n",
+       "1           0.5        100.0            800.0       0.125   False  \n",
+       "2           1.0        100.0            400.0       0.250   False  \n",
+       "3           1.0        100.0            400.0       0.250   False  \n",
+       "4           1.0        100.0            400.0       0.250   False  \n",
+       "...         ...          ...              ...         ...     ...  \n",
+       "16781       1.0       2000.0           2000.0       1.000   False  \n",
+       "16782       1.0       2000.0           2000.0       1.000   False  \n",
+       "16783       1.0       2000.0           2000.0       1.000   False  \n",
+       "16784       1.0       2000.0           2000.0       1.000   False  \n",
+       "16785       1.0       2000.0           2000.0       1.000   False  \n",
        "\n",
-       "[128 rows x 12 columns]"
+       "[16786 rows x 12 columns]"
       ]
      },
      "metadata": {},
@@ -310,12 +346,46 @@
    ],
    "source": [
     "#collapse-show\n",
-    "example_stat_data = \"https://JPrier.github.io/stats/Tile%20Frenzy%20-%20Challenge%20-%202020.12.14-08.46.00%20Stats.csv\"\n",
     "\n",
-    "df = pd.read_csv(example_stat_data, names=[\"Kill #\",\"Timestamp\",\"Bot\",\"Weapon\",\"TTK\",\"Shots\",\"Hits\",\"Accuracy\",\"Damage Done\",\"Damage Possible\",\"Efficiency\",\"Cheated\"])\n",
-    "with pd.option_context('display.max_rows', 10, 'display.max_columns', None):  # more options can be specified also\n",
-    "    display(df)"
+    "# Current online directory for my stats \n",
+    "stat_dir = \"https://jprier.github.io/stats/\"\n",
+    "stat_filenames_url = \"https://jprier.github.io/stats/filenames.txt\"\n",
+    "\n",
+    "stat_filenames = urlopen(stat_filenames_url).read().decode('utf-8').split('\\n')\n",
+    "\n",
+    "kills = \"\"\n",
+    "weapon = \"\"\n",
+    "info = \"\"\n",
+    "\n",
+    "for filename in stat_filenames:\n",
+    "    # TODO: parse filename for challenge name and date\n",
+    "    try:\n",
+    "        filename = filename.replace(' ', '%20')\n",
+    "        file = urlopen(stat_dir + filename).read().decode('utf-8').split('\\n\\n')\n",
+    "\n",
+    "        # TODO: Add challenge name and date to each as columns \n",
+    "        if kills == \"\":\n",
+    "            kills = file[0].split('\\n')[0]\n",
+    "        file[0] = '\\n'.join(file[0].split('\\n')[1:])\n",
+    "        kills = kills + '\\n' + file[0]\n",
+    "\n",
+    "        # file[1] --> df_weapon\n",
+    "        # file[2,3] --> df_info\n",
+    "    except Exception as err:\n",
+    "        print(err)\n",
+    "    \n",
+    "df_kills = pd.read_csv(StringIO(kills), sep=\",\")\n",
+    "\n",
+    "with pd.option_context('display.max_rows', 10, 'display.max_columns', None):\n",
+    "    display(df_kills)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
