Adding plots to minecraft blocks

--- a/_notebooks/MinecraftBlocks.ipynb
+++ b/_notebooks/MinecraftBlocks.ipynb
@@ -44,37 +44,15 @@
     "#collapse-hide\n",
     "import pandas as pd\n",
     "import plotly.express as px\n",
-    "\n",
-    "# from IPython.display import HTML\n",
+    "from IPython.display import HTML\n",
     "# import matplotlib.pyplot as plt"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "               X   Y      Z    Block  sample  playerX  playerY  playerZ\n",
-      "0          -5831   0   6935  bedrock       0  -5581.0     50.0   7185.0\n",
-      "1          -5830   0   6935  bedrock       0  -5581.0     50.0   7185.0\n",
-      "2          -5829   0   6935  bedrock       0  -5581.0     50.0   7185.0\n",
-      "3          -5828   0   6935  bedrock       0  -5581.0     50.0   7185.0\n",
-      "4          -5827   0   6935  bedrock       0  -5581.0     50.0   7185.0\n",
-      "...          ...  ..    ...      ...     ...      ...      ...      ...\n",
-      "128010505  13966  50 -10793    water       9  13720.0     50.0 -11043.0\n",
-      "128010506  13967  50 -10793    water       9  13720.0     50.0 -11043.0\n",
-      "128010507  13968  50 -10793    water       9  13720.0     50.0 -11043.0\n",
-      "128010508  13969  50 -10793    water       9  13720.0     50.0 -11043.0\n",
-      "128010509  13970  50 -10793    water       9  13720.0     50.0 -11043.0\n",
-      "\n",
-      "[128010510 rows x 8 columns]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#hide\n",
     "\n",
@@ -93,17 +71,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "3562\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Get blocks that we care about\n",
     "importantBlocks = ['emerald_ore'] #['coal_ore', 'gold_ore', 'iron_ore', 'diamond_ore', 'lapis_ore', 'redstone_ore', 'emerald_ore']\n",
@@ -113,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "scrolled": false
    },
@@ -124,14 +94,32 @@
     "# df_blocks.hist(column='Y', by='Block', figsize=(10, 800), layout=(80,1), sharex=True)\n",
     "# plt.plot()\n",
     "\n",
-    "# fig = px.histogram(df_blocks, x=\"Y\", color=\"Block\")\n",
-    "# fig.show()\n",
-    "# fig.update_layout()"
+    "fig = px.histogram(df_blocks, x=\"Y\", color=\"Block\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#hide\n",
+    "fig.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#hide_input\n",
+    "HTML(fig.to_html(include_plotlyjs='cdn'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,9 +127,27 @@
     "\n",
     "# TODO: fix X and Z values s.t. the samples are shown together in heatmap\n",
     "\n",
-    "# fig = px.density_heatmap(df_blocks, x=\"X\", y=\"Y\")\n",
-    "# HTML(fig.to_html())\n",
-    "# fig.show()"
+    "fig = px.density_heatmap(df_blocks, x=\"X\", y=\"Y\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#hide\n",
+    "fig.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#hide_input\n",
+    "HTML(fig.to_html(include_plotlyjs='cdn'))"
    ]
   },
   {
@@ -163,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
