--- a/_notebooks/plotlyWithFastPages.ipynb
+++ b/_notebooks/plotlyWithFastPages.ipynb
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "curious-crash",
+   "id": "precise-kitty",
    "metadata": {},
    "source": [
     "Now that we have the figure, if we were to simply run ```fig.show()``` we would be able to see the figure locally but the jekyll build will fail when trying to render the page. In order to get the figure to show locally and on the blog post we have to use a workaround.\n",
@@ -58,12 +58,12 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "respiratory-radiation",
+   "id": "occasional-determination",
    "metadata": {},
    "outputs": [],
    "source": [
     "#\n",
-    "#hide\n",
+    "# #hide\n",
     "fig.show()"
    ]
   },
@@ -4746,7 +4746,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "labeled-district",
+   "id": "breeding-sweden",
    "metadata": {},
    "source": [
     "This will tell jekyll (i think?) to ignore the output and not show any of it, because it is now being ignored the errors are gone. But, we now dont have a plot on the blog post, to get it to render will need to follow the next step.\n",
@@ -4782,7 +4782,7 @@
    ],
    "source": [
     "#\n",
-    "#hide_input\n",
+    "# #hide_input\n",
     "HTML(fig.to_html(include_plotlyjs='cdn'))"
    ]
   },
